# glicko2

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/glicko2/: algorithm.rs  constants.rs  game.rs  mod.rs  one_on_one.rs  rating.rs  tuning.rs
